# hackataoncv

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0abd2638c687_password_nullable.py  23b01d83ad28_user_name.py  27a91f235466_inverview_ai.py  4ef7c3fe9822_init_models.py  f9d32e0162bc_documents.py
src/: config.py  database.py  server.py
src/api/: error_handler.py
src/api/routers/: auth.py  documents.py  interview.py  service.py  test.py
src/dependencies/: auth.py  misc.py
src/models/: __init__.py  document.py  interview.py  user.py
src/repositories/: document_repository.py  interview_repository.py  user_repository.py
src/schemas/: __init__.py  document_schemas.py  interview_schemas.py  user_schemas.py
src/services/: document_service.py  interview_service.py  user_service.py
src/utils/: ai.py  jwt.py
